--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/jasmine-node spec"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "botkit": "^0.5.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "jasmine-node": "^1.14.5",
     "request": "^2.81.0"
   }
 }
