--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@slack/client": "^3.9.0",
     "body-parser": "^1.17.1",
     "botkit": "^0.5.4",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "jasmine-node": "^1.14.5",
